--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Bryan</h1>
-    <h2>Caua</h2>
+    <h2>Caua</h2
+    <h3> Indaial </h3>
+    <h4> Santa Catarina</h4>
 </body>
 </html>
